--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 development:
-  adapter: sqlite3
+  adapter: sqlite
   database: db/development.sqlite3
 
 test:
-  adapter: sqlite3
+  adapter: sqlite
   database: ':memory:'
   
