--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: sqlite
-  #database: db/dabster.sqlite3
-  database: db/development.sqlite3
+  database: db/dabster.sqlite3
+  #database: db/development.sqlite3
 
 test:
   adapter: sqlite
